# SmartAssistant

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.yaml  z_README.yaml  z_ai_dev_considerations.md  z_dev_notes.md  z_gpio.md  z_prompt.md  z_prompt_user.txt  開發注意事項.md
main/: CMakeLists.txt  audio_max98357.c  audio_max98357.h  camera_ov2640.c  camera_ov2640.h  display_config.h  display_ili9488.c  display_ili9488.h  display_module.c  display_module.h  idf_component.yml  main.c  microphone_inmp441.c  microphone_inmp441.h  mpu6050.c  mpu6050.h  mpu6050_module.c  mpu6050_module.h  pir_hcsr505.c  pir_hcsr505.h  pir_module.c  pir_module.h  project_config.h  rtc_ds3231.c  rtc_ds3231.h  time_module.c  time_module.h  wifi_connect.c  wifi_connect.h  wifi_module.c  wifi_module.h
main/fonts/: chinese_font_16.c  chinese_font_16.h
